network/route.tf
//Create route table for public subnets
resource "aws_route_table" "public" {
  vpc_id = aws_vpc.demo-vpc.id


  tags = {
    Name = "public"
  }
}

resource "aws_route" "public" {
  route_table_id            = aws_route_table.public.id
  destination_cidr_block    = "0.0.0.0/0"
  gateway_id = aws_internet_gateway.demo-igw.id 
}


//Create route table for private subnets
resource "aws_route_table" "private" {
  vpc_id = aws_vpc.demo-vpc.id


  tags = {
    Name = "private"
  }
}

resource "aws_route" "private" {
  route_table_id            = aws_route_table.private.id
  destination_cidr_block    = "0.0.0.0/0"
  nat_gateway_id = aws_nat_gateway.gateway.id  
}
  

//Associate route_tables to subnets
resource "aws_route_table_association" "public1" {
  subnet_id      = aws_subnet.demo-subnet1.id
  route_table_id = aws_route_table.public.id
}


resource "aws_route_table_association" "public2" {
  subnet_id      = aws_subnet.demo-subnet2.id
  route_table_id = aws_route_table.public.id
}


resource "aws_route_table_association" "private1" {
  subnet_id      = aws_subnet.demo-subnet3.id
  route_table_id = aws_route_table.private.id
}
